cmake_minimum_required(VERSION 3.20)
project(tutorial)

set(CMAKE_CXX_STANDARD 14)

add_executable(print_triangle print_triangle.cpp)
add_executable(hello_world hello_world.cpp variables.cpp data_type.cpp working_with_strings.cpp working_with_numbers.cpp user_input.cpp array.cpp function_example.cpp return_statement_example.cpp if_condition_example1.cpp if_condition_example_2.cpp switch_example.cpp while_loop_example.cpp for_loop_example.cpp two_dim_array.cpp pointers_example.cpp class_example.cpp class_example_2.cpp getter_setter_example.cpp inheritance_example.cpp)
add_executable(variables_example variables.cpp)
add_executable(data_type data_type.cpp)
add_executable(working_with_strings working_with_strings.cpp)
add_executable(working_with_numbers working_with_numbers.cpp)
add_executable(user_input user_input.cpp)
add_executable(array array.cpp)
add_executable(function_example function_example.cpp)
add_executable(return_statement_example return_statement_example.cpp)
add_executable(if_condition_example1 if_condition_example1.cpp)
add_executable(if_condition_example2 if_condition_example_2.cpp)
add_executable(switch_example switch_example.cpp)
add_executable(while_loop_example while_loop_example.cpp)
add_executable(for_loop_example for_loop_example.cpp)
add_executable(two_dim_array two_dim_array.cpp)
add_executable(pointer_example pointers_example.cpp)
add_executable(class_example class_example.cpp)
add_executable(class_example_2 class_example_2.cpp)
add_executable(getter_setter_example getter_setter_example.cpp)
add_executable(inheritance_example inheritance_example.cpp)